# bghh

./: GITHUB_SETUP.md  QUICKSTART.md  README.md  gradlew  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_bridge.cpp
app/src/main/java/com/example/ankillmtooltip/: LlamaEngine.kt  MainActivity.kt  OverlayController.kt  Prefs.kt  TooltipAccessibilityService.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: accessibility_service_config.xml
